# publisher-reliability-tool

./: .dockerignore  .gitignore  Dockerfile  MODEL-OUTPUT-LICENSE.md  README.md  compose.yaml  pyproject.toml
dataset/: README.md  sampleDataset.csv
dataset/predictions/: manifest.json
docs/: acceptance-tests.md  api-contract.md  architecture.md  csv-storage-contract.md  deployment.md  product-specification.md  scientific-contract.md  traceability.md
models/: README.md
scripts/: check_spec_consistency.py  prepare_public_dataset.py  verify_public_dataset.py
src/publisher_reliability/: __init__.py  aggregation.py  api.py  cli.py  config.py  errors.py  identity.py  importer.py  jobs.py  services.py  storage.py
src/publisher_reliability/frontend/: app.js  index.html  styles.css
tests/: test_api.py  test_core.py  test_importer_service.py  test_prepare_public_dataset.py
